2014-01-27  Georg von Hippel <gmv22@cantab.net>

	* Implemented bugfix contributed by George S. Williams
	(<physicist@websterling.com>); arrowheads are now drawn in a way
	that works both for older and newer PyX versions.

	* Now uses subprocess module to call kpsewhich for hepnicenames.sty
	instead of broken pykpathsea.

	* Phantom constructor now calls DecoratedLine constructor, ensuring
	that Phantom lines can actually be used to define fractional points
	to position stuff.

2013-10-03  Andy Buckley  <andy.buckley@cern.ch>

	* Tagging version 0.3.3.

	* Updating installation system to just use normal distutils, since
	setuptools is now defunct and unnecessary for interaction with
	PyPI.

2010-07-29  Georg von Hippel <gmv22@cantab.net>

	* Fixed bug reported by Jesse Dunietz; each diagram now gets its
	own canvas, which can be set in the constructor.

2010-01-22  Georg von Hippel <gmv22@cantab.net>

	* Added support for helicity-style (=>) arrows. This still needs work.

2010-01-21  Georg von Hippel <gmv22@cantab.net>

	* Added curved attribute to ParallelArrow class to allow
	parallel arrows to bend with the curve.

2010-01-20  Georg von Hippel <gmv22@cantab.net>

	* Added StarshapeMark class and constants for four-, five-,
	six- and eight-pointed stars as vertex markers.

	* Added Gravitino line class.

	* Added Phantom line class for invisible lines.

	* Added Ghost line class for dotted lines (like in YM ghost loops)

2010-01-19  Georg von Hippel <gmv22@cantab.net>

	* Added docstrings to methods missing them.

	* Added PolygonalMark class and constants for triangular,
        diamond-shaped, pentagonal, hexagonal, heptagonal and octogonal
        vertex markers.

2009-10-01  Georg von Hippel <gmv22@cantab.net>

	* Added size support for labels, contributed by Matt Bellis.

	* Minor improvements to XSLT stylesheets.

2009-05-19  Georg von Hippel <gmv22@cantab.net>

	* Changed feynml.py to use hashlib instead of deprecated md5.
