@@ -1,3 +1,8 @@
+2014-03-26  Georg von Hippel <gmv22@cantab.net>
+
+	* Fixed bug in getarrowpath reported by Alejandro Gomez Espinosa
+	(<gomez@physics.rutgers.edu>).
+
 2014-01-27  Georg von Hippel <gmv22@cantab.net>
 
 	* Implemented bugfix contributed by George S. Williams
